# esctool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  esctool.h  esctooldefs.h  esctoolhelpers.cpp  esctoolhelpers.h  esidefs.h  esixmlparsing.cpp  esixmlparsing.h  main.cpp  sii.h  siidecode.cpp  siiencode.cpp  siiencode.h  soesconfigwriter.cpp  soesconfigwriter.h  sscwriter.h  utilfunc.cpp  utilfunc.h
webui/: esctool.css  esctool.js  index.html
